# hackathon_backend

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  fly.toml  main.py  pyproject.toml  run_ag_ui.py
src/: utils.py
src/hackathon_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/marketing/: instructions.py  template_renderer.py
src/veyra/: agents.py  img_gen.py  main.py  models.py  persistence.py  tools.py  v0_client.py  whatsapp_async.py  workflow.py
src/whatsapp/: README.md  __init__.py  app.py  async_router.py  model.py
templates/: post.html.j2
