[project]
name = "veyra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.12",
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "langfuse>=3.3.0",
    "logfire[fastapi]>=4.3.5",
    "openai>=1.101.0",
    "pydantic-ai-slim[ag-ui,anthropic,google,groq]>=0.7.4",
    "openlit>=1.35.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "aiohttp>=3.12.15",
    "aioboto3>=15.1.0",
    "opentelemetry-instrumentation-urllib>=0.57b0",
    "opentelemetry-instrumentation-requests>=0.57b0",
    "opentelemetry-instrumentation-asyncpg>=0.57b0",
    "jinja2>=3.1.6",
    "playwright>=1.54.0",
]
